samples/OK/return_int_from_float_func.php
<?php
declare(strict_types=1);
function foo(int $i) : float
{
    return $i;
}