samples/SEMANTIC_ERROR/fcall_undef_err.php
<?php
declare(strict_types=1);
function foo(int $i, string $s, int $r) : int
{
    return $f;
}
boo();
foo(1,"hello",5);
